adding gym exercise descriptions and target muscle pictures

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -91,7 +91,9 @@ https://www.freepik.com/free-photo/sportive-man-s-body-dark-wall_7515304.htm -co
 https://www.freepik.com/free-photo/man-with-naked-torso-holds-barbell-grey-wall_26220182.htm -fxquadro - Freepik.com- Freepik.com – láb \n
 https://www.freepik.com/free-photo/young-powerful-sportsman-training-push-ups-dark-wall_7515338.htm -cookie_studio - Freepik.com - saját testsúlyos edzésterv \n
 https://www.freepik.com/free-photo/young-man-sportswear-exercise-class-gym_4833325.htm -jcomp - Freepik.com -súlyzós edzésterv \n
-https://www.freepik.com/free-photo/exercise-weights-iron-dumbbell-with-extra-plates_1203207.htm -snowing - Freepik.com -menu háttér
+https://www.freepik.com/free-photo/exercise-weights-iron-dumbbell-with-extra-plates_1203207.htm -snowing - Freepik.com -menu háttér \n
+https://www.freepik.com/free-photo/human-body-frontal_1079428.htm - kjpargeter - emberi izomzat előröl \n
+https://www.freepik.com/free-photo/human-body_1079429.htm - kjpargeter - emberi izomzat hátulról
 "
         android:textSize="16dp" />
 
