--- a/app/src/main/res/layout/activity_gym.xml
+++ b/app/src/main/res/layout/activity_gym.xml
@@ -18,7 +18,7 @@
 
             <ImageButton
                 android:id="@+id/btnChestGym"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_marginBottom="50dp"
                 android:background="@drawable/mellizom">
