--- a/app/src/main/res/layout/gym_abs_felules.xml
+++ b/app/src/main/res/layout/gym_abs_felules.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="50dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_height="match_parent"
@@ -14,9 +14,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/caesar_dressing"
-            android:text="Back4"
+            android:text="Felülés súlyzóval"
             android:textSize="24sp"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
         <pl.droidsonroids.gif.GifImageView
@@ -25,15 +25,24 @@
             android:src="@drawable/my_gif" />
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="257dp"
-            android:src="@drawable/my_gif" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/gymabs_felules" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textColor="@color/white"
             android:layout_marginTop="50dp"
-            android:text="Hello, ez egy példa szöveg!" />
+            android:text="1. Fogj egy súlyzót és feküdj a földre behajlított lábakkal.
+\n\n2. Nyomd súlyzót a fejed fölé és tartsd ott.
+\n\n3. A súlyzóval hajtsd végre a felülést, majd lassan engedd vissza magad.
+\n\n4. Hajtsd végre a gyakorlatot 8-12 ismétlésszámmal.
+
+"
+            />
+
 
     </LinearLayout>
 </ScrollView>
