--- a/app/src/main/res/layout/activity_gym_leg.xml
+++ b/app/src/main/res/layout/activity_gym_leg.xml
@@ -39,16 +39,17 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>
+                        android:layout_width="135dp"
+                        android:layout_height="85dp"
+                        android:src="@drawable/my_gif"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Leg1"
-                        android:textColor="@color/black"
+                        android:text="Guggolás"
+                        android:gravity="center"
+                        android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
 
@@ -72,16 +73,17 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>
+                        android:layout_width="135dp"
+                        android:layout_height="85dp"
+                        android:src="@drawable/my_gif"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Leg2"
-                        android:textColor="@color/black"
+                        android:text="Lábtolás"
+                        android:gravity="center"
+                        android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
 
@@ -105,16 +107,17 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>
+                        android:layout_width="135dp"
+                        android:layout_height="85dp"
+                        android:src="@drawable/my_gif"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Leg3"
-                        android:textColor="@color/black"
+                        android:text="Lábnyújtás gépen"
+                        android:gravity="center"
+                        android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
 
@@ -138,16 +141,17 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>
+                        android:layout_width="135dp"
+                        android:layout_height="85dp"
+                        android:src="@drawable/my_gif"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:text="Leg4"
-                        android:textColor="@color/black"
+                        android:text="Álló vádligép"
+                        android:gravity="center"
+                        android:textColor="@color/white"
                         android:textSize="18dp" />
                 </LinearLayout>
 
