--- a/app/src/main/res/layout/gym_abs_dumbellside.xml
+++ b/app/src/main/res/layout/gym_abs_dumbellside.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="50dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_height="match_parent"
@@ -14,9 +14,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/caesar_dressing"
-            android:text="Chest6"
+            android:text="Dumbbell Side Bridge"
             android:textSize="24sp"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
         <pl.droidsonroids.gif.GifImageView
@@ -25,15 +25,25 @@
             android:src="@drawable/my_gif" />
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="257dp"
-            android:src="@drawable/my_gif" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/gymabs_dumbellside" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textColor="@color/white"
             android:layout_marginTop="50dp"
-            android:text="Hello, ez egy példa szöveg!" />
+            android:text="1. Feküdj az egyik oldaladra, tedd egymásra a lábaid, majd nyomd fel magad. Támaszd meg magad az egyik könyöködön.
+\n\n2. Másik kezedben fogj egy súlyzót és nyújtsd ki a karod egyenesen a mennyezet felé. Tartsd egyenesen vonalban  a tested.
+\n\n3. Tartsd meg ezt a pozíciót néhány másodpercig, majd engedd le tested a kiindulási helyzetbe.
+\n\n4. Hajtsd végre a gyakorlatot 8-12 ismétlésszámmal majd végezd el a gyakorlatot a másik oldalon is.
+
+
+"
+            />
+
 
     </LinearLayout>
 </ScrollView>
