--- a/app/src/main/res/layout/gym_chest_ferdepados.xml
+++ b/app/src/main/res/layout/gym_chest_ferdepados.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="50dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_height="match_parent"
@@ -14,9 +14,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/caesar_dressing"
-            android:text="Back3"
+            android:text="Fekvenyomás egykezes súlyzókkal ferde padon"
             android:textSize="24sp"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
         <pl.droidsonroids.gif.GifImageView
@@ -25,15 +25,24 @@
             android:src="@drawable/my_gif" />
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="257dp"
-            android:src="@drawable/my_gif" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/gymchest_fekvenyomas" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textColor="@color/white"
             android:layout_marginTop="50dp"
-            android:text="Hello, ez egy példa szöveg!" />
+            android:text="1. Állítsd be a padot körülbelül 30-45 fokos szögben. Fogd meg a súlyzókat, feküdj padra, úgy hogy a lábaid legyenek stabilan a talajon.
+\n\n2. Emeld fel a súlyzókat, úgy hogy a könyököd 45-60 fokos szöget zárjon a testeddel.
+\n\n3. Miközben engedjük lefelé a súlyzókat a mellkasunk mellé vegyünk egy nagy levegőt, majd kilégzés közben nyomjuk fel a súlyzókat.
+\n\n4. Hajtsd végre a gyakorlatot 8-12 ismétlésszámmal.
+
+"
+            />
+
 
     </LinearLayout>
 </ScrollView>
