--- a/app/src/main/res/layout/gym_shoulder_eloreemeles.xml
+++ b/app/src/main/res/layout/gym_shoulder_eloreemeles.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="50dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_height="match_parent"
@@ -14,9 +14,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/caesar_dressing"
-            android:text="Biceps1"
+            android:text="Előre emelés állva egykezes súlyzóval"
             android:textSize="24sp"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
         <pl.droidsonroids.gif.GifImageView
@@ -25,15 +25,24 @@
             android:src="@drawable/my_gif" />
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="257dp"
-            android:src="@drawable/my_gif" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/gymshoulder_eloreemeles" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textColor="@color/white"
             android:layout_marginTop="50dp"
-            android:text="Hello, ez egy példa szöveg!" />
+            android:text="1. Vegyél mindekét kezedbe 1-1 súlyzót. Állj egyenes háttal, kis terpeszben, lábaid körülbelül vállszélességben legyenek egymástól, karjaid lógjanak a tested mellett.
+\n\n2. Belégzés közben emeld fel a súlyzókat. A könyökök legyenek enyhén behajlítva, karok kinyújtva, tenyérrel lefelé nézzenek.
+\n\n3. Tartsd meg rövid ideig.
+\n\n4. Majd lassan kilégzés közben engedd le a súlyzókat a kiindulási helyzetbe.
+\n\n5. Hajtsd végre a gyakorlatot 8-12 ismétlésszámmal.
+"
+            />
+
 
     </LinearLayout>
 </ScrollView>
